[SpMV] Add SpMV

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ project(dpref LANGUAGES CXX)
 add_compile_options("-ggdb3" "-O0")
 
 add_subdirectory(Queue)
+add_subdirectory(SpMV)
 add_subdirectory(BFS)
+
