--- a/SpMV/CMakeLists.txt
+++ b/SpMV/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_executable(SpMV main.cpp SpMV.cpp)
+
+add_executable(SpMVFirstSlicing main.cpp SpMVFirstSlicing.cpp)
+target_link_libraries(SpMVFirstSlicing PRIVATE Queue)
