[Vertex] Create header-only lib for `Vertex`

--- a/BFS/CMakeLists.txt
+++ b/BFS/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(BFS main.cpp BFS.cpp)
+target_link_libraries(BFS PRIVATE Vertex)
 
 add_executable(BFSFirstSlicing main.cpp BFSFirstSlicing.cpp)
-target_link_libraries(BFSFirstSlicing PRIVATE Queue)
+target_link_libraries(BFSFirstSlicing PRIVATE Vertex Queue)
