[MG] Slice `smooth` once

--- a/MG/CMakeLists.txt
+++ b/MG/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(MG main.cpp MG.cpp Utils.cpp)
+add_executable(MG main.cpp MG.cpp Utils.cpp smooth.cpp)
 
-add_executable(MGFirstSlicing main.cpp MGFirstSlicing.cpp Utils.cpp)
+add_executable(MGFirstSlicing main.cpp MGFirstSlicing.cpp Utils.cpp smoothFirstSlicing.cpp)
 target_link_libraries(MGFirstSlicing PRIVATE Queue)
